Commit of UI System at 5.4.0f3

--- a/UnityEditor.UI/UnityEditor.UI.csproj
+++ b/UnityEditor.UI/UnityEditor.UI.csproj
@@ -129,7 +129,9 @@
     <Compile Include="UI\RawImageEditor.cs">
       <SubType>Code</SubType>
     </Compile>
-    <Compile Include="UI\RectMask2DEditor.cs" />
+    <Compile Include="UI\RectMask2DEditor.cs">
+      <SubType>Code</SubType>
+    </Compile>
     <Compile Include="UI\ScrollbarEditor.cs">
       <SubType>Code</SubType>
     </Compile>
