--- a/UnityEngine.UI/UnityEngine.UI.csproj
+++ b/UnityEngine.UI/UnityEngine.UI.csproj
@@ -145,7 +145,9 @@
     <Compile Include="UI\Core\GraphicRaycaster.cs">
       <SubType>Code</SubType>
     </Compile>
-    <Compile Include="UI\Core\GraphicRebuildTracker.cs" />
+    <Compile Include="UI\Core\GraphicRebuildTracker.cs">
+      <SubType>Code</SubType>
+    </Compile>
     <Compile Include="UI\Core\GraphicRegistry.cs">
       <SubType>Code</SubType>
     </Compile>
