--- a/UnityEngine.UI/UnityEngine.UI.csproj
+++ b/UnityEngine.UI/UnityEngine.UI.csproj
@@ -43,7 +43,8 @@
   <ItemGroup>
     <Reference Include="System" />
     <Reference Include="System.Core" />
-    <Reference Include="UnityEngine">
+    <Reference Include="UnityEngine, Version=0.0.0.0, Culture=neutral, processorArchitecture=MSIL">
+      <SpecificVersion>False</SpecificVersion>
       <HintPath>..\lib\UnityEngine.dll</HintPath>
     </Reference>
   </ItemGroup>
@@ -279,6 +280,7 @@
     <Compile Include="UI\Core\Utility\VertexHelper.cs">
       <SubType>Code</SubType>
     </Compile>
+    <Compile Include="UI\Core\Utility\VertexHelperExtension.cs" />
     <Compile Include="UI\Core\VertexModifiers\BaseMeshEffect.cs">
       <SubType>Code</SubType>
     </Compile>
