--- a/com.unity.ugui/package.json
+++ b/com.unity.ugui/package.json
@@ -14,7 +14,7 @@
     "TMP",
     "SDF"
   ],
-  "description": "⚠️ DEPRECATED ⚠️\n\nThe uGUI 3.0.0‑exp.x line is in maintenance‑only mode. It will receive compilation fixes so that it continues to build with new Unity Editor versions, but no new features or bug fixes are planned. We strongly discourage starting new projects on this package.\n\nFor production work, use the built‑in, stable uGUI 2.0.0 package that ships with every Unity Editor.",
+  "description": "Unity UI is a set of tools for developing user interfaces for games and applications. It is a GameObject-based UI system that uses Components and the Game View to arrange, position, and style user interfaces. ​ You cannot use Unity UI to create or change user interfaces in the Unity Editor.",
   "dependencies": {
     "com.unity.modules.ui": "1.0.0",
     "com.unity.modules.imgui":"1.0.0"
